# TeamSpeak-3-Telegram-Bridge

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: deploy.yml
deploy/: package.ini
src/: WebComm.cpp  WebComm.h  bbcode.hpp  config.cpp  config.h  configui.ui  definitions.h  helper.hpp  plugin.cpp  plugin.h  update.cpp  update.h  update.ui
